# xface_ysh

./: .build_threadx.swp  .~lock.BOOK.pdf#  BOOK  Makefile  NOTE  README  RISCV  TYPE  TypeDef  a.out  c_doc  cm4  english  fork.sh  language  ld  macro  main.c  printf  readme
__ysh__/: BSP  CODE调试  DEBUG_RAM  GPIO配置  NOTE  a.out  call  call.c  callback.c  gpio_doc  gpio配置  main_app.c  note_doc  soft_i2c  回调函数  状态机  笔记
app_inventor/: app_doc
arduino/: Arduino_OOP  Arduino_class  Vector  arduino_doc  blink
ccc/: a.out  ccc_doc  main.c  typedef
command/: bc  cmd_doc  iconv  tar
compiler/: JSON
compiler/makefile/cmake/cmake_demo/: .CMakeLists.txt.un~  CMakeLists.txt  README
compiler/makefile/cmake/cmake_demo/include/: test.c
compiler/makefile/cmake/cmake_demo/src/: .main.c.un~  main.c
doxygen/: c_doc  c_oop  doxygen
embedded/: Makefile  inline_asm  libopencm3  makefile_doc  rtos
hardware/: kicad  (+2 more)
system/GNOME/FVWM/icons/: ChangeLog  Makefile.am  Makefile.in  names.lst
system/GNOME/FVWM/icons/01x01-template/: _symlinks.lst
system/GNOME/FVWM/icons/16x16-general/: network.xpm
system/GNOME/FVWM/icons/16x16-kde/: chat.xpm  game-action.xpm  game-board.xpm  item.xpm  lock.xpm  science.xpm
system/GNOME/FVWM/icons/20x20-martys/: _symlinks.lst
system/GNOME/FVWM/icons/20x20-martys2/: _symlinks.lst
system/GNOME/FVWM/icons/22x22-gartoon/: _symlinks.lst
system/GNOME/FVWM/icons/24x24-infox/: amusement.xpm  calculator.xpm  cd-player.xpm  chat.xpm  choice-no.xpm  choice-yes.xpm  clock.xpm  colors.xpm  configuration.xpm  development.xpm  disk-cd.xpm  disk-floppy.xpm  disk.xpm  display.xpm  editor.xpm  empty.xpm  file-manager.xpm  file.xpm  folder-open.xpm  folder.xpm  font.xpm  game-action.xpm  game-board.xpm  game-cards.xpm  gnome.xpm  gnu.xpm  help.xpm  home.xpm  image-processor.xpm  image-viewer.xpm  information.xpm  item.xpm  kde.xpm  keyboard.xpm  linux.xpm  lock.xpm  mail.xpm  modules.xpm  monitoring.xpm  mouse.xpm  (+25 more)
system/GNOME/FVWM/icons/32x32-aquafusion/: _symlinks.lst
system/GNOME/FVWM/icons/32x32-gant/: _symlinks.lst
system/GNOME/FVWM/icons/32x32-kde/: item.xpm  www.xpm
system/GNOME/FVWM/icons/48x48-general/: graphics.xpm
system/GNOME/FVWM/icons/48x48-infox/: _symlinks.lst  amusement.xpm  calculator.xpm  cd-player.xpm  chat.xpm  choice-no.xpm  choice-yes.xpm  colors.xpm  configuration.xpm  development.xpm  disk-cd.xpm  disk-floppy.xpm  disk.xpm  display.xpm  editor.xpm  empty.xpm  file-manager.xpm  file.xpm  folder-open.xpm  folder.xpm  font.xpm  game-action.xpm  game-board.xpm  game-cards.xpm  gnome.xpm  gnu.xpm  help.xpm  home.xpm  image-processor.xpm  image-viewer.xpm  information.xpm  item.xpm  kde.xpm  keyboard.xpm  linux.xpm  lock.xpm  mail.xpm  modules.xpm  monitoring.xpm  mouse.xpm  (+25 more)
system/GNOME/FVWM/icons/56x56-martys/: _symlinks.lst
system/GNOME/FVWM/icons/56x56-martys2/: _symlinks.lst
system/GNOME/FVWM/icons/64x64-gant/: _symlinks.lst
yushihu/PRO_RP2040/PERIPHERAL/pico_spi/: CMakeLists.txt  spi.c
yushihu/PRO_RP2040/pico_i2c/: CMakeLists.txt  i2c.c
yushihu/PRO_RP2040/pico_tempsensor/: CMakeLists.txt
(+3156 files in other folders)
